# mgdio

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  main.py  pyproject.toml
examples/: calendar_demo.py  drive_demo.py  gmail.py  maps_demo.py  sheets.py  whoop_demo.py  ynab_demo.py
mgdio/: __init__.py  __main__.py  cli.py  exceptions.py  keyring_backend.py  settings.py
mgdio/auth/: __init__.py  _interactive.py  _keyring.py  status.py
mgdio/auth/google/: __init__.py  _headless_flow.py  _profiles.py  _setup_server.py  auth.py
mgdio/auth/maps/: __init__.py  _setup_server.py  auth.py
mgdio/auth/whoop/: __init__.py  _setup_server.py  auth.py
mgdio/auth/ynab/: __init__.py  _setup_server.py  auth.py
mgdio/calendar/: __init__.py  calendars.py  client.py  events.py
mgdio/drive/: __init__.py  client.py  files.py  permissions.py
mgdio/gmail/: __init__.py  _setup_page.py  _setup_server.py  auth.py  client.py  messages.py  sender.py
mgdio/maps/: __init__.py  client.py  directions.py  geocoding.py
mgdio/sheets/: __init__.py  client.py  spreadsheets.py  values.py
mgdio/skills/: __init__.py
mgdio/skills/mgdio-calendar/: SKILL.md
mgdio/skills/mgdio-drive/: SKILL.md
mgdio/skills/mgdio-gmail/: SKILL.md
mgdio/skills/mgdio-maps/: SKILL.md
mgdio/skills/mgdio-sheets/: SKILL.md
mgdio/skills/mgdio-whoop/: SKILL.md
mgdio/skills/mgdio-ynab/: SKILL.md
mgdio/whoop/: __init__.py  _parse.py  client.py  cycles.py  recovery.py  sleep.py  user.py  workouts.py
mgdio/ynab/: __init__.py  accounts.py  budgets.py  categories.py  client.py  transactions.py
tests/: conftest.py  test_cli.py  test_keyring_backend.py
tests/auth/: test_interactive.py  test_keyring_helpers.py  test_status.py
tests/auth/google/: test_auth.py  test_headless_flow.py  test_profiles.py  test_setup_server.py
tests/auth/maps/: test_auth.py  test_setup_server.py
tests/auth/whoop/: test_auth.py  test_setup_server.py
tests/auth/ynab/: test_auth.py  test_setup_server.py
tests/calendar/: test_calendars.py  test_events.py  test_integration.py
tests/drive/: test_files.py  test_integration.py  test_permissions.py
tests/gmail/: test_auth.py  test_integration.py  test_messages.py  test_sender.py
tests/maps/: test_client.py  test_directions.py  test_geocoding.py
tests/sheets/: test_integration.py  test_spreadsheets.py  test_values.py
tests/skills/: test_deploy.py  test_skill_files.py
tests/whoop/: test_client.py  test_resources.py
tests/ynab/: test_accounts.py  test_budgets.py  test_categories.py  test_client.py  test_integration.py  test_transactions.py
