[project]
name = "mgdio"
version = "0.1.0"
description = "Personal connectivity tools (Gmail, Sheets, Calendar, ...)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Michael DiNunzio", email = "mdinunzio@gmail.com" }]
dependencies = [
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "platformdirs>=4.2",
    "keyring>=25.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
sheets-pandas = ["pandas>=2.1"]
sheets-polars = ["polars>=0.20"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "black>=24.4",
    "isort>=5.13",
    "flake8>=7.0",
    "flake8-docstrings>=1.7",
    "pandas>=2.1",
    "polars>=0.20",
]

[project.scripts]
mgdio = "mgdio.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mgdio"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mgdio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: hits real Google APIs; requires MGDIO_RUN_INTEGRATION=1",
]
